--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.mts --sourcemap --format cjs,esm --dts --clean",
-    "prepublishOnly": "pnpm run build",
-    "lint": "eslint . --ext .mts",
-    "test": "vitest test --typecheck --run --no-isolate --coverage",
-    "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
+    "lint": "eslint . --ext .ts",
+    "test": "vitest test --typecheck --run --no-isolate",
     "validate": "tsc --noEmit --project tsconfig.test.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luolapeikko/ts-common.git"
+    "url": "git+https://github.com/mharj/mharj-tests.git"
   },
   "keywords": [
     "typescript",
@@ -37,9 +34,9 @@
   "author": "mharj",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/luolapeikko/ts-common/issues"
+    "url": "https://github.com/mharj/mharj-tests/issues"
   },
-  "homepage": "https://github.com/luolapeikko/ts-common#readme",
+  "homepage": "https://github.com/mharj/mharj-tests#readme",
   "devDependencies": {
     "@cspell/eslint-plugin": "^8.18.0",
     "@eslint/js": "^9.23.0",
@@ -48,8 +45,6 @@
     "@types/node": "^22.13.14",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "@vitest/coverage-v8": "^3.0.9",
-    "c8": "^10.1.3",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^4.2.5",
@@ -59,16 +54,9 @@
     "eslint-plugin-sonarjs": "^3.0.2",
     "prettier": "^3.5.3",
     "tslib": "^2.8.1",
-    "tsup": "^8.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
-    "vite": "^6.2.3",
-    "vitest": "^3.0.9"
-  },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
+    "vite": "^6.2.5",
+    "vitest": "^3.1.1"
   }
 }
